tests/baselines/reference/conditionalExpressionNewLine8.errors.txt
tests/cases/compiler/conditionalExpressionNewLine8.ts(1,9): error TS2552: Cannot find name 'a'. Did you mean 'NaN'?
tests/cases/compiler/conditionalExpressionNewLine8.ts(2,5): error TS2552: Cannot find name 'b'. Did you mean 'v'?
tests/cases/compiler/conditionalExpressionNewLine8.ts(2,9): error TS2552: Cannot find name 'd'. Did you mean 'v'?
tests/cases/compiler/conditionalExpressionNewLine8.ts(2,13): error TS2552: Cannot find name 'e'. Did you mean 'v'?
tests/cases/compiler/conditionalExpressionNewLine8.ts(3,5): error TS2552: Cannot find name 'c'. Did you mean 'v'?
tests/cases/compiler/conditionalExpressionNewLine8.ts(3,9): error TS2552: Cannot find name 'f'. Did you mean 'v'?
tests/cases/compiler/conditionalExpressionNewLine8.ts(3,13): error TS2552: Cannot find name 'g'. Did you mean 'v'?


==== tests/cases/compiler/conditionalExpressionNewLine8.ts (7 errors) ====
    var v = a 
            ~
!!! error TS2552: Cannot find name 'a'. Did you mean 'NaN'?
      ? b ? d : e
        ~
!!! error TS2552: Cannot find name 'b'. Did you mean 'v'?
            ~
!!! error TS2552: Cannot find name 'd'. Did you mean 'v'?
                ~
!!! error TS2552: Cannot find name 'e'. Did you mean 'v'?
      : c ? f : g;
        ~
!!! error TS2552: Cannot find name 'c'. Did you mean 'v'?
            ~
!!! error TS2552: Cannot find name 'f'. Did you mean 'v'?
                ~
!!! error TS2552: Cannot find name 'g'. Did you mean 'v'?